[:ADD:] adding right aside functions

--- a/index.html
+++ b/index.html
@@ -402,10 +402,10 @@
           <section class="card mb-3">
             <div class="list-group">
               <img id="imgAside" src="https://res.cloudinary.com/practicaldev/image/fetch/s--TpB6Gcv9--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/alltev6vpz87u0abg9fr.jpg" alt="imagen" class="borderRadius">
-                  <div class="card-body">
-                    <h5 class="font-weight-bold mt-2 mb-3 ms-2" id="cardAsideTitle">Anime-レストラン Storefront using refine</h5>                    
-                    <button type="button" class="btn btn-primary w-100">Details</button>                   
-                  </div>
+              <div class="card-body">
+                <h5 class="font-weight-bold mt-2 mb-3 ms-2" id="cardAsideTitle">Anime-レストラン Storefront using refine</h5>                    
+                <button type="button" class="btn btn-primary w-100" id="keyRightAside">Details</button>                 
+              </div>
             </div>
           </section>
           <section class="card mb-3">
