update filters buttons

--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@
         <main>
           <!-- Daniel -->
           <div class="d-flex justify-content-start">
-            <h5 class="me-3 topmenu__texts--hover p-2 rounded">Relevant</h5>
-            <h5 class="me-3 fw-light topmenu__texts--hover p-2 rounded">Latest</h5>
-            <h5 class="fw-light topmenu__texts--hover p-2 rounded">Top</h5>
+            <a name="filter-type" class="me-3 topmenu__texts--hover p-2 rounded">Relevant</a>
+            <a name="filter-type" class="me-3 fw-light topmenu__texts--hover p-2 rounded">Latest</a>
+            <a name="filter-type" class="fw-light topmenu__texts--hover p-2 rounded">Top</a>
           </div>
           <div id="wrapperPosts">
           </div>
