--- a/index.html
+++ b/index.html
@@ -387,10 +387,10 @@
       <div class="col-12 col-sm-9 col-md-9 col-lg-6">
         <main>
           <!-- Daniel -->
-          <div class="d-flex justify-content-start mb-2">
-            <a name="filter-type" class="me-3 topmenu__texts--hover p-2 rounded">Relevant</a>
-            <a name="filter-type" class="me-3 fw-light topmenu__texts--hover p-2 rounded">Latest</a>
-            <a name="filter-type" class="fw-light topmenu__texts--hover p-2 rounded">Top</a>
+          <div class="d-flex justify-content-start mb-2" id="filter-wrapper">
+            <a name="filter-type" class="me-3 topmenu__texts--hover p-2 rounded" value="relevant">Relevant</a>
+            <a name="filter-type" class="me-3 fw-light topmenu__texts--hover p-2 rounded" value="latest">Latest</a>
+            <a name="filter-type" class="fw-light topmenu__texts--hover p-2 rounded" value="top">Top</a>
           </div>
           <div id="wrapperPosts">
           </div>
