Add feature aside tags cards

--- a/index.html
+++ b/index.html
@@ -411,43 +411,19 @@
           <section class="card mb-3">
             <div class="list-group">
               <div class="d-flex text-end justify-content-between align-items-center list-group-item">
-                <a class="text-decoration-none side__link" href="https://dev.to/t/discuss"><h3>#discuss</h3></a>
+                <a class="text-decoration-none side__link" href="https://dev.to/t/discuss"><h3>#CSS</h3></a>
               </div>
-              <div>
-                <a class="list-group-item" href="https://dev.to/devteam/what-was-your-win-this-week-5345">
-                  <div>What was your win this week?</div>
-                  <div>9 comments</div>
-                </a>
-                <a class="list-group-item" href="https://dev.to/codenewbieteam/juggling-multiple-projects-how-do-you-stay-sane-4h67">
-                  <div>Juggling Multiple Projects: How Do You Stay Sane?</div>
-                  <div>4 comments</div>
-                </a>
-                <a class="list-group-item" href="https://dev.to/rizmyabdulla/the-mobgamesai-3md6">
-                  <div>The Mobgames.AI</div>
-                  <div>3 comments</div>
-                </a>
-                <a class="list-group-item" href="https://dev.to/devteam/do-code-comments-deserve-a-special-spot-or-can-well-written-code-speak-for-itself-16hm">
-                  <div>Do Code Comments Deserve a Special Spot or Can Well-Written Code Speak for Itself?</div>
-                  <div>5 comments</div>
-                </a>
-                <a class="list-group-item" href="https://dev.to/codenewbieteam/new-language-vs-complex-requirements-whats-your-pick-4d7g">
-                  <div>New Language vs. Complex Requirements - What's Your Pick?</div>
-                  <div>2 comments</div>
-                </a>
+              <div id="tagCSS-wrapper">
               </div>
             </div>
           </section>
           <section class="card">
             <div class="list-group">
               <div class="d-flex text-end justify-content-between align-items-center list-group-item">
-                <a class="text-decoration-none side__link" href="https://dev.to/t/watercooler"><h3>#watermelon</h3></a>
+                <a class="text-decoration-none side__link" href="https://dev.to/t/watercooler"><h3>#JSS</h3></a>
               </div>
-              <a class="list-group-item" href="https://dev.to/codenewbieteam/dev-office-tour-v3-3bhe">DEV Office Tour
-                <div><span class="rounded bg-warning text-dark">New</span></div>
-              </a>
-              <a class="list-group-item" href="https://dev.to/appmap/how-do-you-say-k8s-3mhb">How do you say... "k8s"?
-                <div><span class="rounded bg-warning text-dark">New</span></div>
-              </a>
+              <div id="tagJS-wrapper">
+              </div>
             </div>
           </section>
       </aside>
